--- a/debian/rules
+++ b/debian/rules
@@ -1,12 +1,23 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
 
-DEB_PYTHON_SYSTEM := pysupport
+%:
+	dh $@ --with python2,python3
 
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/python-distutils.mk
+override_dh_auto_build:
+	dh_auto_build
+	set -e; for python in $$(py3versions -r); do \
+		$$python setup.py build; \
+	done
 
-clean::
-	rm -rf build build-stamp configure-stamp build/ MANIFEST
-	dh_clean
+override_dh_auto_clean:
+	dh_auto_clean
+	find -name \*.pyc -print0 | xargs -0r rm -f
+	find -name __pycache__ -print0 | xargs -0r rm -rf
+	rm -rf build
 
+override_dh_auto_install:
+	dh_auto_install
+	set -e; for python in $$(py3versions -r); do \
+		$$python setup.py install --root=$(CURDIR)/debian/tmp \
+			--no-compile -O0 --install-layout=deb; \
+	done
